src/styles/header.module.css
.header_container {
    width: 100%; 
    padding: 0% 2% 0% 2%;
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    transition: all 1s ease;
    box-sizing: border-box;
    /* border: 3px solid red; */
}

.logo_wrapper {
    width: 30%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
    transition: all 1s ease;
    text-decoration: none;
    padding: 0.5%;
    gap:1%;
    /* border: 2px solid green; */
}

.logo_image{
    width: 45px; 
    height: 45px;
    background-image: url('/gittan_logo.svg');
    background-size: 100% 100%;
    background-position: center;
    transition: all 1s ease;
    /* border: 2px solid red; */
}

.logo_text {
    width: 100%;
    color: black;
    font-size: 28px;
    font-family: 'Nanum Gothic';
    font-weight: 600;
    word-wrap: break-word;
    transition: all 1s ease; 
    padding-left: 2%;
    /* border: 2px solid black; */
}

.spacer{
    width: 100px;
    height: 74px;
    /* border: 2px solid red; */
}

.menu_wrapper {
    justify-content: flex-start;
    align-items: flex-start;
    gap: 18px; 
    display: flex;
    /* border: 2px solid blue; */
}

.menuItem {
    text-decoration: none;
    color:inherit;
    position: relative; 
    display: inline-block; 
    color: black;
    font-size: 20px;
    font-family: 'Nanum Gothic';
    font-weight: 400;
    word-wrap: break-word;
    transition: all 1s ease;
    cursor: pointer;
  }

  .menuItem::after {
    content: '';
    position: absolute;
    width: 0; 
    height: 2px; 
    background-color: black;
    bottom: 0;
    left: 0;
    transition: width 1s ease; 
  }

  .menuItem:hover::after {
    width: 100%;
  }

  .menuItem a{
    text-decoration: none;
    color:inherit;
  }

@media (max-width: 480px) {
    .spacer{
        width: 45px;
        height: 10px;
    }
    .logo_wrapper{
        width: 40%;
    }
    .logo_image{
        width: 30px; 
        height: 30px;
    }
    .logo_text{
        font-size: 14px;
    }
    .menuItem {
        font-size: 8px;
    }
  }

  @media (min-width: 481px) and (max-width: 768px) {
    .spacer{
        width: 40px;
        height: 20px;
    }
    .logo_wrapper{
        width: 35%;
    }
    .logo_image{
        width: 40px; 
        height: 40px;
    }
    .logo_text{
        font-size: 20px;
    }
    .menuItem {
        font-size: 12px;
    }
  }

  @media (min-width: 769px) and (max-width: 1024px) {
    .spacer{
        width: 40px;
        height: 60px;
    }
    .logo_wrapper{
        width: 30%;
    }
    .logo_text{
        font-size: 24px;
    }
    .menuItem {
        font-size: 16px;
    }
  }

